--- a/src/components/CardList/styles.css
+++ b/src/components/CardList/styles.css
@@ -1,5 +1,9 @@
 .card-list {
 	display: flex;
+	justify-content: flex-start;
 	flex-wrap: wrap;
-	gap: 10px;
+	gap: 15px;
+	max-height: 70vh;
+	overflow-y: auto;
+	padding: 10px;
 }
