--- a/src/components/Photos/styles.css
+++ b/src/components/Photos/styles.css
@@ -1,6 +1,10 @@
 .photo-card-title {
 	color: var(--taupe);
 	font-size: 20px;
+	&:hover {
+		text-decoration: underline;
+		cursor: pointer;
+	}
 }
 
 .photo-card-content {
