--- a/src/components/Photos/styles.css
+++ b/src/components/Photos/styles.css
@@ -1,6 +1,11 @@
 .photo-card-title {
 	color: var(--taupe);
-	font-size: 20px;
+	line-height: 1;
+	height: 80px;
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden; /* "overflow" value must be different from "visible" */
+	text-overflow: ellipsis;
 	&:hover {
 		text-decoration: underline;
 		cursor: pointer;
